<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="@drawable/toprounded"
    android:orientation="vertical"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="vertical">
        <View
            android:layout_width="80dp"
            android:background="@color/gray0"
            android:layout_marginTop="3dp"
            android:layout_height="3dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/deletebids" />

        <TextView
            style="@style/Font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/are_you_you_want_to_delete_bid"
            android:textColor="@color/black"
            android:textSize="21dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/if_you_delete_th"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/txt_reject"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_emty"
            android:text="@string/no"
            android:textColor="@color/teal_700"
            android:textSize="12dp" />
        <TextView
            android:id="@+id/btn_yes"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:text="@string/yes_continue"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />
    </LinearLayout>



</LinearLayout>