<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.postload.PostLoadActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="@drawable/gradient"
        android:orientation="vertical"
        android:padding="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:padding="10dp">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@drawable/ic_back_white" />

            <TextView
                android:id="@+id/txt_actionbar"
                style="@style/Font"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/post_load"
                android:textColor="@color/white"
                android:textSize="18dp" />
        </RelativeLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:gravity="center"
                android:padding="10dp">

                <TextView
                    style="@style/Font"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:background="@drawable/circle"
                    android:gravity="center"
                    android:text="1"
                    android:textSize="12dp" />

                <TextView
                    style="@style/Font"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:text="@string/load_details"
                    android:textColor="@color/white"
                    android:textSize="12dp" />

                <View
                    android:layout_width="15dp"
                    android:layout_height="2dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/purple_200" />

                <TextView
                    style="@style/Font"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:background="@drawable/circle_emty"
                    android:gravity="center"
                    android:text="2"
                    android:textColor="@color/purple_200" />

                <TextView
                    style="@style/Font"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:text="@string/vehicle_type"
                    android:textColor="@color/purple_200"
                    android:textSize="12dp" />

                <View
                    android:layout_width="15dp"
                    android:layout_height="2dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/purple_200" />

                <TextView
                    style="@style/Font"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:background="@drawable/circle_emty"
                    android:gravity="center"
                    android:text="3"
                    android:textColor="@color/purple_200" />

                <TextView
                    style="@style/Font"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:text="@string/post"
                    android:textColor="@color/purple_200"
                    android:textSize="12dp" />


            </LinearLayout>
        </HorizontalScrollView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:padding="10dp"
            app:cardCornerRadius="15dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="20dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/input_round_box"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <AutoCompleteTextView
                            android:id="@+id/pickup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="46dp"
                            android:backgroundTint="@android:color/transparent"
                            android:drawableStart="@drawable/ic_pickup_map"
                            android:drawablePadding="10dp"
                            android:hint="@string/pickup_point"
                            android:padding="10dp"
                            android:textColor="@color/black"
                            android:textSize="16dp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="3dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="3dp"
                            android:background="@color/gray0" />

                        <AutoCompleteTextView
                            android:id="@+id/drop"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="46dp"
                            android:backgroundTint="@android:color/transparent"
                            android:drawableStart="@drawable/ic_pickup_map"
                            android:drawablePadding="10dp"
                            android:hint="@string/drop_point"
                            android:padding="10dp"
                            android:textColor="@color/black"
                            android:textSize="16dp" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="15dp" />

                    <EditText
                        android:id="@+id/ed_materialname"
                        style="@style/AppTheme.input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_materialname"

                        android:drawablePadding="10dp"
                        android:hint="@string/material_name" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="15dp" />

                    <EditText
                        android:id="@+id/ed_typeweight"
                        style="@style/AppTheme.input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_weight"
                        android:drawablePadding="10dp"
                        android:inputType="number"
                        android:hint="@string/type_of_weight" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="15dp" />

                    <EditText
                        android:id="@+id/ed_description"
                        style="@style/AppTheme.input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_description"
                        android:drawablePadding="10dp"
                        android:hint="@string/description" />


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="50dp" />

                    <TextView
                        android:id="@+id/btn_next"
                        style="@style/AppTheme.Button"
                        android:layout_width="match_parent"


                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/next" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="20dp" />
                </LinearLayout>
            </ScrollView>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</RelativeLayout>